--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,82 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="5Ix-ol-ES8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bde-ey-ilZ">
+                                <rect key="frame" x="147.66666666666666" y="64" width="118.99999999999997" height="20"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPa-2r-EdT">
+                                <rect key="frame" x="77" y="169" width="260" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="260" id="Wvp-Xi-7sd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="52"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fg2-OJ-uav">
+                                <rect key="frame" x="78.666666666666686" y="242" width="257" height="36"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="26"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find team in you city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HG2-x7-SMH">
+                                <rect key="frame" x="77.666666666666686" y="328" width="259" height="46.666666666666686"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Li-no-3mY" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="792" width="414" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.4024763296771523" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="yuv-es-6MV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="28"/>
+                                <state key="normal" title="GET STARTED">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="5Ix-ol-ES8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0Gq-ce-InY"/>
+                            <constraint firstItem="5Ix-ol-ES8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6QW-lZ-QE6"/>
+                            <constraint firstItem="fg2-OJ-uav" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fna-7T-y95"/>
+                            <constraint firstItem="fg2-OJ-uav" firstAttribute="top" secondItem="fPa-2r-EdT" secondAttribute="bottom" constant="1" id="G1b-2r-h0Y"/>
+                            <constraint firstItem="5Ix-ol-ES8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="Jk3-86-DgC"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="4Li-no-3mY" secondAttribute="bottom" constant="20" id="SDM-Ym-t0X"/>
+                            <constraint firstItem="HG2-x7-SMH" firstAttribute="width" secondItem="fPa-2r-EdT" secondAttribute="width" multiplier="0.996154" id="WU5-cE-k4a"/>
+                            <constraint firstItem="HG2-x7-SMH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Y85-g8-QBy"/>
+                            <constraint firstItem="4Li-no-3mY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gSu-qN-iZF"/>
+                            <constraint firstItem="bde-ey-ilZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="itq-N4-55Q"/>
+                            <constraint firstItem="fPa-2r-EdT" firstAttribute="top" secondItem="bde-ey-ilZ" secondAttribute="bottom" constant="85" id="jmM-5X-UBc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4Li-no-3mY" secondAttribute="trailing" id="kBb-Nv-sbx"/>
+                            <constraint firstAttribute="bottom" secondItem="5Ix-ol-ES8" secondAttribute="bottom" id="kLC-V5-l9z"/>
+                            <constraint firstItem="HG2-x7-SMH" firstAttribute="top" secondItem="fg2-OJ-uav" secondAttribute="bottom" constant="50" id="rVu-BY-udT"/>
+                            <constraint firstItem="fPa-2r-EdT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sOz-Bd-efR"/>
+                            <constraint firstItem="bde-ey-ilZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="tuf-fi-IAk"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bgImg" destination="5Ix-ol-ES8" id="5AG-dg-THz"/>
+                        <outlet property="swoosh" destination="bde-ey-ilZ" id="nNb-JJ-5gv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="100.44642857142857"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="swooshLogo" width="119" height="20"/>
+        <image name="welcomeScreenBG" width="414" height="736"/>
+    </resources>
 </document>
