Added unwind functionality

--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -53,6 +53,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ivn-uT-lWl" kind="show" id="yzi-pd-BKU"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -75,6 +78,7 @@
                             <constraint firstItem="bde-ey-ilZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="tuf-fi-IAk"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="A97-u0-HyB"/>
                     <connections>
                         <outlet property="bgImg" destination="5Ix-ol-ES8" id="5AG-dg-THz"/>
                         <outlet property="swoosh" destination="bde-ey-ilZ" id="nNb-JJ-5gv"/>
@@ -82,21 +86,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="100.44642857142857"/>
+            <point key="canvasLocation" x="1042.0289855072465" y="100.44642857142857"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="UOD-kV-xCB">
             <objects>
                 <viewController id="ivn-uT-lWl" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OID-Ud-PXd">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="b9s-pp-9z2">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="85S-NN-VUl">
-                                <rect key="frame" x="0.0" y="64" width="414" height="95.666666666666686"/>
+                                <rect key="frame" x="0.0" y="20.000000000000007" width="414" height="95.666666666666686"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="LMR-uh-jIx">
                                         <rect key="frame" x="147.66666666666666" y="0.0" width="118.99999999999997" height="20"/>
@@ -110,7 +114,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Y8x-ef-20v">
-                                <rect key="frame" x="25" y="209.66666666666663" width="364" height="210"/>
+                                <rect key="frame" x="25" y="165.66666666666663" width="364" height="210"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUd-yQ-VNU" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="364" height="50"/>
@@ -124,7 +128,7 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fuH-Fn-IeY" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="80.000000000000028" width="364" height="50"/>
+                                        <rect key="frame" x="0.0" y="80" width="364" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="eUY-uB-Vm3"/>
@@ -153,7 +157,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dbj-qp-7Tf" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
-                                <rect key="frame" x="20" y="791" width="374" height="51"/>
+                                <rect key="frame" x="20" y="737" width="374" height="51"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.50337926599363614" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="xKj-D7-TKf"/>
@@ -163,12 +167,24 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cXw-Wy-6xh">
+                                <rect key="frame" x="0.0" y="6" width="29" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="1Lg-vS-fcB"/>
+                                    <constraint firstAttribute="height" constant="26" id="Bad-Wc-lWH"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="jH4-AU-a5r" kind="unwind" unwindAction="unwindFromSkillVC:" id="3HS-mV-ZT8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Xck-Pn-2KJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Xck-Pn-2KJ" firstAttribute="trailing" secondItem="dbj-qp-7Tf" secondAttribute="trailing" constant="20" id="33n-d9-XBa"/>
                             <constraint firstItem="85S-NN-VUl" firstAttribute="leading" secondItem="Xck-Pn-2KJ" secondAttribute="leading" id="Arh-hw-Av7"/>
+                            <constraint firstItem="cXw-Wy-6xh" firstAttribute="leading" secondItem="Xck-Pn-2KJ" secondAttribute="leading" id="CmA-w2-wZ6"/>
                             <constraint firstItem="85S-NN-VUl" firstAttribute="top" secondItem="Xck-Pn-2KJ" secondAttribute="top" constant="20" id="Eqy-iV-UaQ"/>
                             <constraint firstItem="Y8x-ef-20v" firstAttribute="leading" secondItem="Xck-Pn-2KJ" secondAttribute="leading" constant="25" id="F89-z4-A2u"/>
                             <constraint firstAttribute="trailing" secondItem="b9s-pp-9z2" secondAttribute="trailing" id="OMD-BV-cB8"/>
@@ -178,14 +194,17 @@
                             <constraint firstItem="b9s-pp-9z2" firstAttribute="top" secondItem="OID-Ud-PXd" secondAttribute="top" id="hNK-im-Gla"/>
                             <constraint firstItem="b9s-pp-9z2" firstAttribute="leading" secondItem="OID-Ud-PXd" secondAttribute="leading" id="jWM-36-kj6"/>
                             <constraint firstItem="Y8x-ef-20v" firstAttribute="top" secondItem="85S-NN-VUl" secondAttribute="bottom" constant="50" id="lkf-OI-RHd"/>
+                            <constraint firstItem="cXw-Wy-6xh" firstAttribute="top" secondItem="Xck-Pn-2KJ" secondAttribute="top" constant="6" id="n8V-mK-ztC"/>
                             <constraint firstItem="Xck-Pn-2KJ" firstAttribute="trailing" secondItem="Y8x-ef-20v" secondAttribute="trailing" constant="25" id="rmF-sh-Yps"/>
                             <constraint firstItem="Xck-Pn-2KJ" firstAttribute="trailing" secondItem="85S-NN-VUl" secondAttribute="trailing" id="rzL-M1-TQh"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="a2I-bi-ZoT"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="scE-t1-GuN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="jH4-AU-a5r" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="894.20289855072474" y="102.45535714285714"/>
+            <point key="canvasLocation" x="1804.3478260869567" y="102.45535714285714"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="kDU-NR-5Vm">
@@ -272,10 +291,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Co-JK-hOE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1681" y="104"/>
+            <point key="canvasLocation" x="2589.8550724637685" y="103.79464285714285"/>
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
